--- a/src/ecosystem1.html
+++ b/src/ecosystem1.html
@@ -15,29 +15,25 @@
 <body>
 
 <main>
-
-	<section>
-		<canvas id="eco-canvas" width="200" height="200">
-			Your browser does not support the HTML5 canvas tag.
-		</canvas>
-	</section>
-
 	<section class="text">
-		
-		<div class="eco-buttons">
-			<input type="button" class="btn-stop" value="stop"/>
-			<input type="button" class="btn-go"   value="go"/>
-		</div>
-
 		<div class="eco-title">
 			<p>Ecosystem : 1</p>
 			<p>Strategy : neighbor (environmental automata)</p>
 			<p>Pattern (0-511): 
 				<input class="select" value="511"></input> 
 				<!-- <select class="select"></select>  -->
-			</p>			
+			</p>
 		</div>
-		
+		<p>	some highlights: 511, 510, 254, 251</p>
+	</section>
+	<section class="eco-section">
+		<canvas id="eco-canvas" class="eco-canvas" width="150">
+			Your browser does not support the HTML5 canvas tag.
+		</canvas>
+		<div class="eco-buttons">
+			<input type="button" class="btn-stop" value="stop"/>
+			<input type="button" class="btn-go"   value="go"/>
+		</div>
 	</section>
 </section>
 <aside>
