start on dot strategy

--- a/src/ecosystem1.html
+++ b/src/ecosystem1.html
@@ -7,6 +7,7 @@
 				<select class="strategy">
 					<option value="neighbor" selected="selected">neighbor (environmental automata)</option>
 					<option value="particle">particle</option>
+					<option value="dot">dot</option>
 				</select> 
 			</p>
 			<p>Pattern (0-511): 
@@ -34,6 +35,7 @@
 <script src="desiderata/a1.js"></script>	
 <script src="desiderata/neighbor.js"></script>	
 <script src="desiderata/particle.js"></script>	
+<script src="desiderata/dot.js"></script>	
 <script src="desiderata/render.js"></script>	
 <script src="desiderata/boot.js"></script>	
 
